trying to fix alignment issue on different devices

--- a/src/App.css
+++ b/src/App.css
@@ -54,52 +54,47 @@
 
 .proj-img {
   display:flex;
+  margin: auto;
 }
 .proj-img img {
   height: 30vw;
   width: auto;
+  margin: auto;
 }
 
 .banner-text {
   background-color: black;
   opacity: .8;
-  padding-top: 10%;
-  padding-bottom:10%;
   margin: auto;
+  width: 40vw;
+  height: 30vw;
   text-align: center;
-  width:100%;
+  display:table;
 }
 
 .banner-text h1 {
-  font-size:500%;
+  font-size: 5vw;
   font-weight: bold;
   color: white;
-  margin: auto;
+  
 }
 
 .banner-text hr {
-  border-top: 5px dotted white;
-  width: 50%;
+  border-top: 0.2rem dotted white;
+  width: 60%;
   margin: auto;
 }
 
 .banner-text p {
   color: white; 
-  font-size: 120%;
-  padding: 1em;
-  margin: auto;
+  font-size: 1.5vw;
 }
 
-.social-links {
-  display: block;
-  justify-content: space-between;
-  width: 50%;
-  margin: auto;
-}
-.social-links i {
+.banner-text i {
   color: white;
-  font-size: 5em;
-  padding: 8px; 
+  font-size: 5.5vw;
+  padding-left: 1vw;
+  padding-right: 1vw;
 }
 
 /* PROJECTS PAGE */
